Added lobster font. Contact Form WIP

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon/favicon-16x16.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=News+Cycle">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster">
     <title>Vintko</title>
 </head>
 
